<resources>
    <string name="app_name">Three Songs</string>
    <string name="btnSong1">Song 1</string>
    <string name="btnSong2">Song 2</string>
    <string name="btnSong3">Song 3</string>
    <string name="btnPlay">Play Song</string>
    <string name="txtSongTitle_Gorillaz">On Melancholy Hill by Gorillaz</string>
    <string name="txtSongTitle_TBS">The Bards Song (In the Forest) by The Blind Guardian</string>
    <string name="txtSongTitle_BR">Bohemian Rhapsody by Queen</string>
    <string name="btnBack">Back</string>
</resources>
